# phonikud-chatterbox-runpod

./: .gitignore  Dockerfile  README.md  build.md  main.py  pyproject.toml  runpod_deployment.md
.runpod/: hub.json
src/: main.py  test.py  tts.py
web/: index.html  script.js  settings.js  styles.css
