[project]
name = "phonikud-chatterbox-runpod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phonikud-chatterbox",
]

[tool.uv.sources]
phonikud-chatterbox = { git = "https://github.com/thewh1teagle/phonikud-chatterbox" }
